# claude-cto

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  MANIFEST.in  README.md  VERSION_MANAGEMENT.md  config.example.json  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  pytest.ini  run_tests.sh  smithery.yaml  uv.toml
.github/workflows/: auto-publish.yml  auto-version.yml  ci.yml  emergency-version-fix.yml  homebrew-automation.yml  homebrew-simple.yml  release.yml  version-check.yml
claude-worker/: Dockerfile
claude-worker/claude_cto/cli/: main.py
claude_cto/: __init__.py
claude_cto/cli/: __init__.py  config.py  main.py
claude_cto/core/: __init__.py  database.py  error_codes.py  executor.py  updater.py
claude_cto/mcp/: __init__.py  auto_config.py  enhanced_proxy.py  factory.py  orchestration_tool.py  proxy.py  standalone.py
claude_cto/migrations/: __init__.py  manager.py
claude_cto/server/: __init__.py  circuit_breaker_persistence.py  config.py  crud.py  database.py  error_handler.py  executor.py  log_formatter.py  main.py  memory_monitor.py  models.py  notification.py  orchestrator.py  path_utils.py  port_manager.py  process_registry.py  recovery.py  retry_handler.py  server_lock.py  server_logger.py  signal_handler.py  subprocess_manager.py  task_logger.py  task_runner.py
claude_worker/: __init__.py
claude_worker/cli/: __init__.py  config.py  main.py
claude_worker/core/: __init__.py  database.py  error_codes.py  executor.py
claude_worker/mcp/: __init__.py  enhanced_proxy.py  factory.py  orchestration_tool.py  proxy.py  standalone.py
claude_worker/server/: __init__.py  crud.py  database.py  error_handler.py  executor.py  log_formatter.py  main.py  memory_monitor.py  models.py  notification.py  path_utils.py  retry_handler.py  server_logger.py  task_logger.py
docs/: 00-overview.md  01-getting-started-installation.md  01-getting-started-quick-start.md  02-user-guide-cli-reference.md  02-user-guide-monitoring-and-logs.md  02-user-guide-task-submission.md  03-concepts-architecture.md  03-concepts-database-schema.md  03-concepts-process-model.md  03-concepts-project-philosophy.md  04-integrations-mcp-claude-code.md  04-integrations-mcp-for-agents.md  04-integrations-rest-api.md  05-administration-configuration.md  05-administration-deployment.md  05-administration-security.md  06-contributing-development-setup.md  06-contributing-guide.md  ERROR_HANDLING.md  HOMEBREW_TOKEN_SETUP.md  QA_TEST_PLAN.md  ROADMAP.md
docs/HANDOFF_DOCS_TO_NEXT_DEVELOPER/: README.md
examples/: complex_refactor.json  data_pipeline.json  mcp_dependency_example.py  mcp_orchestration_example.py  parallel_analysis.json  simple_pipeline.json
scripts/: bump_version.py  bump_version_enhanced.py  install-mcp.sh  install_hooks.sh  pre-publish-checklist.py  publish.sh  sync_versions.py
src/cli/: __init__.py  main.py
src/core/: __init__.py  database.py  executor.py
src/mcp/: proxy.py  standalone.py
src/server/: __init__.py  database.py  main.py
tests/: conftest.py
tests/fixtures/: __init__.py  database.py  mocks.py  sample_data.py
tests/integration/: __init__.py
tests/reports/: report_20250822_013014.html  results_20250822_013014.xml
tests/unit/: __init__.py
tests/unit/mcp/: __init__.py
tests/unit/server/: __init__.py
